--- a/mainapp/templates/mainapp/courses_list.html
+++ b/mainapp/templates/mainapp/courses_list.html
@@ -1,6 +1,5 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
-{% load tags %}
 {% block content %}
 <!-- PageBanner -->
 	<div class="container-fluid page-banner event-grid event-list no-padding" style="background: url({% static '/images/about-banner.jpg'%});">
@@ -28,73 +27,43 @@
 				<h3>Our {{current_language.name}} courses</h3>
 				<span>Current courses</span>
 			</div>
-			<div class="event-categories">
-				<div class="event-select-option">
-					<select class="selectpicker" title="Choose one of the following...">
-						<option data-icon="icon-Tag">Level</option>
-						<option>A</option>
-						<option>B</option>
-						<option>C</option>
-					</select>
-				</div>
-				<div class="event-select-option">
-					<select class="selectpicker">
-						<option data-icon="icon-Tag">Number level</option>
-						<option>1.1</option>
-						<option>1.2</option>
-					</select>
-				</div>
-				<div class="event-select-option">
-					<select class="selectpicker">
-						<option data-icon="icon-WorldWide">Location</option>
-						<option>German</option>
-						<option>Italy</option>
-						<option>USA</option>
-					</select>
-				</div>
-				<a href="#">Filter</a>
-			</div>
-			<div id="courses-row" class="row">
-				<div class="col-md-9 col-sm-6 col-xs-6 content-area">
-					{% for lang_course in language_courses %}
-						<article class="type-post">
-							<div class="entry-cover">
-								<a href="{% url 'main:language_course' lang_course.pk %}"><img src="{% static 'images/default_img.jpg' %}" alt="history" width="310" height="246"/></a>
-							</div>
-							<div class="entry-block">
-								<div class="entry-title">
-									<a href="{% url 'main:language_course' lang_course.pk %}"><h3>{{lang_course.course.name}}</h3></a>
-								</div>
-								<div class="entry-meta">
-									<div class="post-date">
-										<p>{{lang_course.course.start_date | str_month }}<span>
-											{{lang_course.course.start_date.day}}</span></p>
-									</div>
-									<div class="post-metablock">
-										<div class="post-time">
-											<span>{{lang_course.course.start_date|date:"d.M"}} - {{lang_course.course.finish_date|date:"d.M"}}, {{lang_course.course.start_date.time|time:"g:i a"}} - {{lang_course.course.finish_date|time:"g:i a"}}</span>
-									    </div>
-										<div class="post-location">
-											<span>{{lang_course.course.address}}</span>
-										</div>
-									</div>
-								</div>
-								<div class="entry-content">
-									<p>{{lang_course.course.short_desc}}</p>
-								</div>
-								<a href="{% url 'main:language_course' lang_course.pk %}" class="learn-more">Learn More</a>
-							</div>
-						</article>
-                    {% endfor %}
 
-					<!-- Ow Pagination -->
-						<div id="courses-pagination">
-							{% include 'mainapp/includes/pagination.html'%}
-						</div>
-					<!-- Ow Pagination /- -->
-
+			<form class="filter-form" action="" method="get">
+				<div class="event-categories">
+					<div class="event-select-option">
+						<select name="level_letter" class="selectpicker">
+							<option data-icon="icon-Tag" value="">Level</option>
+							{% for level in view.get_level %}
+								<option value="{{ level.level_letter }}">
+									{{ level.level_letter }}
+								</option>
+							{% endfor %}
+						</select>
+					</div>
+					<div class="event-select-option">
+						<select name="level_number" class="selectpicker">
+							<option data-icon="icon-Tag" value="">Number level</option>
+							{% for number in view.get_level_number %}
+								<option value="{{ number.level_number }}">
+									{{ number.level_number }}
+								</option>
+							{% endfor %}
+						</select>
+					</div>
+					<div class="event-select-option">
+						<select name="city" class="selectpicker">
+							<option data-icon="icon-WorldWide" value="">Location</option>
+							{% for city in view.get_city %}
+								<option value="{{ city.city }}">
+									{{ city.city }}
+								</option>
+							{% endfor %}
+						</select>
+					</div>
+					<a id="filter-courses-btn" href="{% url 'main:filter_courses' current_language.pk %}?page=1">Filter</a>
 				</div>
-			</div>
+			</form>
+			{% include 'mainapp/includes/courses_list.html' %}
 		</div>
 		<div class="section-padding"></div>
 	</div><!-- Event List /- -->
