--- a/basketapp/templates/basketapp/includes/cart.html
+++ b/basketapp/templates/basketapp/includes/cart.html
@@ -1,6 +1,7 @@
 <div class="container cart">
     <div class="cart-title">
-        <span class="cart-title">Your shop card</span>
+        <span>Your shop card</span>
+        <p>{{ user.get_username }}</p>
     </div>
     <div id="cart-items">
         <div class="container">
