--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -73,6 +73,10 @@
 
                     <div class="col-md-4 col-sm-4 col-xs-6 register">
 
+                        {% if user.is_superuser %}
+                                <a class="register-link" href="{% url 'admin:index' %}">Admin</a>
+                        {% endif %}
+
                         {% if user.is_authenticated %}
                             <a class="register-link" href="{% url 'auth:logout' %}">Logout</a>
                         {% else %}
