Added admin in authapp.

--- a/basketapp/templates/basketapp/includes/cart.html
+++ b/basketapp/templates/basketapp/includes/cart.html
@@ -1,7 +1,7 @@
 <div class="container cart">
     <div class="cart-title">
         <span>Your shop card</span>
-        <p>{{ user.get_username }}</p>
+        <p>{{ user.get_short_name }}</p>
     </div>
     <div id="cart-items">
         <div class="container">
