--- a/authapp/templates/authapp/password_reset_confirm.html
+++ b/authapp/templates/authapp/password_reset_confirm.html
@@ -28,6 +28,7 @@
                 </div>
                 <div class="signup-image">
                     <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
+                    <a href="{% url 'main:index' %}" class="signup-image-link">Home</a>
                 </div>
             </div>
         </div>
