--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -42,13 +42,13 @@
                             {% endfor %}
                             <div class="form-group form-button">
                                 <input type="submit" name="signup" id="signup" class="form-submit" value="Update"/>
-                                <a href="{% url 'main:index' %}" class="form-submit rm_underline">Home</a>
                             </div>
                         </form>
                     </div>
                      <div class="signup-image">
                         <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
                          <a href="{% url 'auth:password_change' %}" class="signup-image-link">Change password</a>
+                         <a href="{% url 'main:index' %}" class="signup-image-link">Home</a>
                      </div>
                 </div>
             </div>
