--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -30,6 +30,7 @@
                     <div class="signup-image">
                         <figure><img src="{% static 'images/signup-image.jpg' %}" alt="sing up image"></figure>
                         <a href="{% url 'auth:login' %}" class="signup-image-link">I am already member</a>
+                        <a href="{% url 'main:index' %}" class="signup-image-link">Home</a>
                     </div>
                 </div>
             </div>
