--- a/basketapp/templates/basketapp/includes/total.html
+++ b/basketapp/templates/basketapp/includes/total.html
@@ -1,9 +1,9 @@
 {% load tags %}
 <div class="cart-data">
-    <div class="cart-total">
+    <div class="cart-total" id="total_quantity" data-quantity="{{ cart|cart_total_quantity}}">
         Total quantity: {{ cart|cart_total_quantity}}
     </div>
-    <div class="cart-total">
+    <div class="cart-total" id="total_price" data-price="{{ cart|cart_total_price|floatformat }}">
         Total price: {{ cart|cart_total_price|floatformat }} &euro;
     </div>
 </div>
