--- a/static/css/style.css
+++ b/static/css/style.css
@@ -975,7 +975,26 @@ a {
     margin-bottom: 30px;
 }
 
+.total-area #paypal-button-container {
+    width: 350px;
+}
 
+/*Order*/
+
+.order-success {
+    margin-bottom: 100px;
+    font-size: 20px;
+    text-align: center;
+    width: 100%;
+}
+
+.order-block{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 100px;
+    flex-wrap: wrap;
+
+}
 /* ## Footer */
 .footer-main {	
 	background-color: #29363e;
@@ -1409,6 +1428,12 @@ a {
 	.menu-search .sb-search.sb-search-open .sb-search-input {
 		width: 210px;
 	}
+
+    .cart-total {
+        margin: 10px;
+        padding-right: 15px;
+
+}
 	
 	/* - Footer Main */		
 	/* - Footer About */
