--- a/orderapp/templates/orderapp/order_complete.html
+++ b/orderapp/templates/orderapp/order_complete.html
@@ -5,6 +5,6 @@
             You can see your order in orders.</p>
     </div>
     <div class="buy-cart-btn">
-        <a href="#">Orders</a>
+        <a href="{% url 'order:order_list' %}">Orders</a>
     </div>
 </div>
