--- a/orderapp/templates/orderapp/orders.html
+++ b/orderapp/templates/orderapp/orders.html
@@ -71,7 +71,7 @@
                                             <p>{{ item.payment.payment_time }}</p>
                                         </td>
                                         <td class="cart-description">
-                                            <p>{{ item.payment.total_price }} &euro;</p>
+                                            <p>{{ item.total_price }} &euro;</p>
                                         </td>
                                     </tr>
                                 {% endfor %}
