--- a/mainapp/templates/mainapp/language_course_single.html
+++ b/mainapp/templates/mainapp/language_course_single.html
@@ -50,12 +50,12 @@
 									</div>
 									<div class="post-location">
 										<span class="icon icon-Tag"></span>
-										<span>Level - {{current_course.level_letter}}{{current_course.level_number}}</span>
+										<span>Level: {{current_course.level_letter}}{{current_course.level_number}}</span>
 									</div>
 									<div class="post-location">
 										<span class="icon icon-User"></span>
 										<span>
-											Teacher - {% for teacher in current_course.course.teacher.all %}
+											Teacher: {% for teacher in current_course.course.teacher.all %}
 											<a href="{% url 'main:teacher' teacher.pk %}">{{teacher}}</a>{% endfor %}
 										</span>
 									</div>
@@ -67,6 +67,32 @@
 										<span class="glyphicon glyphicon-credit-card"></span>
 										<span>Price: {{current_course.course.price}}&euro;</span>
 									</div>
+									<div class="post-location">
+										<span class="glyphicon glyphicon-book"></span>
+										<span>
+											Book:
+											{% for book in current_course.book.all %}
+											<a href="#">{{book.name}} {{book.author}} </a>
+											{% endfor %}
+										</span>
+									</div>
+									<div class="post-location">
+										{% if current_course.course.count > 0 %}
+											<span class="glyphicon glyphicon-ok"
+										    	{% if current_course.course.count > 15 %}
+													style='color: green'
+												{% elif current_course.course.count > 5 %}
+													style='color: orange'
+												{% else %}
+													style='color: red'
+												{% endif %}>
+											</span>
+											<span>Free places: {{current_course.course.count}}</span>
+										{% else %}
+											<span class="glyphicon glyphicon-remove" style="color: red"></span>
+											<span>No free places!</span>
+										{% endif %}
+									</div>
 								</div>
 							</div>
 							<div class="entry-content">
@@ -75,7 +101,11 @@
 						</div>
 					</article>
 					<div class="buy-course">
-						<div class="buy-cart-btn"><a href="{% url 'basket:add' current_course.course.pk %}">Add in basket</a></div>
+						{% if current_course.course.count > 0 %}
+							<div class="buy-cart-btn">
+								<a href="{% url 'basket:add' current_course.course.pk %}">Add in basket</a>
+							</div>
+						{% endif %}
 					</div>
 
 					<!-- Map -->
