--- a/basketapp/templates/basketapp/includes/cart_items.html
+++ b/basketapp/templates/basketapp/includes/cart_items.html
@@ -22,7 +22,7 @@
                                 <h4><a href="{% url 'main:language_course' item.course.pk %}">{{ item.course.name }}</a></h4>
                             </td>
                             <td class="cart-description">
-                                <p>Level: {{item.course.languagecourse.level_letter}}{{item.course.languagecourse.level_number}}</p>
+                                <p>Level: {{item.course.language_course.level_letter}}{{item.course.language_course.level_number}}</p>
                                 <p>Date: {{item.course.start_date|date:"d.Ny"}} - {{item.course.finish_date|date:"d.Ny"}}</p>
                                 <p>Time: {{item.course.start_date.time|time:"g:i a"}} - {{item.course.finish_date.time|time:"g:i a"}}</p>
                                 <p>Place: {{item.course.address}}</p>
